# Avi-

./: .gitignore  PICKS.md  README.md  TEST_COVERAGE_ANALYSIS.md  app.py  outreach.py  pyproject.toml  requirements.txt
.github/workflows/: refresh-recommendations.yml  tests.yml
avi-snow-os/: .gitignore  package-lock.json  package.json  tsconfig.json
avi-snow-os/brand/: brand-kit.md  projects.md
avi-snow-os/brand/voice-corpus/: README.md
avi-snow-os/claude-project/: project-instructions.md  quick-reference.md  setup-walkthrough.md
avi-snow-os/src/: cli.ts  client.ts  corpus.ts
avi-snow-os/src/modules/: caption.ts
docs/: index.html  recommendations.json
kalshi_recommender/: __init__.py  cli.py  formatter.py  kalshi_client.py  scoring.py
kalshi_recommender/data/: __init__.py  sample_markets.json
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_formatter.py  test_kalshi_client.py  test_scoring.py
vibe-playlist-generator/: .gitignore  README.md
vibe-playlist-generator/client/: next.config.js  package-lock.json  package.json
vibe-playlist-generator/client/components/: EmbedPlayer.js  LoginButton.js  Slider.js  TrackCard.js  TrackList.js  VibeForm.js
vibe-playlist-generator/client/lib/: api.js
vibe-playlist-generator/client/pages/: _app.js  index.js
vibe-playlist-generator/client/styles/: globals.css
vibe-playlist-generator/server/: .env.example  package-lock.json  package.json
vibe-playlist-generator/server/src/: config.js  index.js
vibe-playlist-generator/server/src/middleware/: errorHandler.js  (+1 more)
(+9 files in other folders)
